--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,13 +122,13 @@ jobs:
         git clone --recurse-submodules https://github.com/frida/frida
         cd frida
         cd subprojects/frida-core
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0001-strongR-frida-string_frida_rpc.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0002-strongR-frida-io_re_frida_server.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0004-strongR-frida-io_frida_agent_so.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0005-strongR-frida-symbol_frida_agent_main.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0006-strongR-frida-thread_gum_js_loop.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0007-strongR-frida-thread_gmain.patch
-        git am --show-current-patch=diff ../../../Patchs/strongR-frida/frida-core/0001-strongR-frida-protocol_unexpected_command.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0001-strongR-frida-string_frida_rpc.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0002-strongR-frida-io_re_frida_server.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0004-strongR-frida-io_frida_agent_so.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0005-strongR-frida-symbol_frida_agent_main.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0006-strongR-frida-thread_gum_js_loop.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0007-strongR-frida-thread_gmain.patch
+        git am ../../../Patchs/strongR-frida/frida-core/0001-strongR-frida-protocol_unexpected_command.patch
         cd ../../..
         
         ARCHES="android-arm android-arm64 android-x86 android-x86_64"
